[gd_scene load_steps=17 format=3 uid="uid://dvqb5sm0so880"]

[ext_resource type="Script" path="res://[03] Scripts/Player/player.gd" id="1_bc28k"]
[ext_resource type="Resource" uid="uid://cc1ip5x1et07i" path="res://[01] Assets/Resources/test_inv.tres" id="2_5x2x4"]
[ext_resource type="PackedScene" uid="uid://bbw2th1r62agx" path="res://[02] Scenes/Objects/flashlight.tscn" id="2_eps21"]
[ext_resource type="PackedScene" uid="uid://bkw44b336b3on" path="res://[02] Scenes/Objects/flare-gun.tscn" id="3_each3"]
[ext_resource type="Texture2D" uid="uid://b88vmul1yxodn" path="res://[01] Assets/textures/white-circle.png" id="3_ps7kr"]
[ext_resource type="PackedScene" uid="uid://bf0sgkj74xipl" path="res://[02] Scenes/PlayerInteractor.tscn" id="5_1kjng"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7r16m"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_klddx"]
height = 1.5

[sub_resource type="BoxShape3D" id="BoxShape3D_86jbq"]
size = Vector3(0.2, 0.2, 2.5)

[sub_resource type="Gradient" id="Gradient_x7tha"]
offsets = PackedFloat32Array(0, 0.773196, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3hfha"]
gradient = SubResource("Gradient_x7tha")

[sub_resource type="Curve" id="Curve_3uf8v"]
max_value = 0.3
_data = [Vector2(0, 0), 0.0, 3.81523, 0, 0, Vector2(0.25, 0.3), 0.0, 0.0, 0, 0, Vector2(1, 0.3), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_bnk8a"]
curve = SubResource("Curve_3uf8v")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_s2f35"]
emission_shape = 3
emission_box_extents = Vector3(100, 0, 100)
direction = Vector3(0, -1, 0)
initial_velocity_min = 4.0
initial_velocity_max = 4.0
scale_min = 0.2
scale_max = 0.2
scale_curve = SubResource("CurveTexture_bnk8a")
color_ramp = SubResource("GradientTexture1D_3hfha")
turbulence_enabled = true
turbulence_noise_scale = 0.0
collision_mode = 1
collision_friction = 1.0
collision_bounce = 0.0
sub_emitter_mode = 3
sub_emitter_amount_at_collision = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w7nqu"]
transparency = 1
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("3_ps7kr")
emission = Color(1, 1, 1, 1)
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_ritwt"]
material = SubResource("StandardMaterial3D_w7nqu")

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_bc28k")
inventory_data = ExtResource("2_5x2x4")

[node name="standing_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_7r16m")

[node name="crouching_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("CapsuleShape3D_klddx")
disabled = true

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Camera3D" type="Camera3D" parent="head"]
fov = 70.0

[node name="PlayerInteractor" parent="head/Camera3D" node_paths=PackedStringArray("player") instance=ExtResource("5_1kjng")]
player = NodePath("../../..")

[node name="CollisionShape3D" parent="head/Camera3D/PlayerInteractor" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.25)
shape = SubResource("BoxShape3D_86jbq")

[node name="Flashlight" parent="head" instance=ExtResource("2_eps21")]
transform = Transform3D(-3.27836e-09, 0, 0.075, 0, 0.075, 0, -0.075, 0, -3.27836e-09, 0.149, -0.403, -0.094)

[node name="Flare Gun" parent="head" instance=ExtResource("3_each3")]
transform = Transform3D(1, 0, 1.06581e-14, 0, 1, 0, -1.06581e-14, 0, 1, 0.407415, -0.269472, -0.590243)

[node name="OverheadRay" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)

[node name="GPUParticlesCollisionHeightField3D" type="GPUParticlesCollisionHeightField3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1)
size = Vector3(60, 60, 60)

[node name="GPUParticles3D" type="GPUParticles3D" parent="GPUParticlesCollisionHeightField3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 19.1089, 0)
amount = 58988
lifetime = 10.0
visibility_aabb = AABB(-32.8363, -20.2831, -26.82, 65.6727, 40.5662, 53.64)
process_material = SubResource("ParticleProcessMaterial_s2f35")
draw_pass_1 = SubResource("QuadMesh_ritwt")

[editable path="head/Camera3D/PlayerInteractor"]
